Subir index.html

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
 <section class="hero">
   <h1>❤️ Nuestra Historia ❤️</h1>
-  <p id="dias"></p>
+  <p id="mensajeHora"></p>
   <button onclick="iniciarAmor()">💖 Iniciar</button>
 </section>
 
